# repos_webexmemebot

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  renovate.json
.archive/: requirements-dev.txt  requirements.txt
.gitea/workflows/: ci.yml  pr-title-semantic.yml  release.yml  security.yml
.gitea/workflows-disabled/: security.yml
app/: close.py  img.py  main.py  meme.py
tests/: test_config.py  test_meme.py
