[project]
name = "webexmemebot"
version = "0.0.0"
description = "Webex-based meme generation bot using memegen.link."
readme = "README.md"
authors = [
    {name = "luketainton"},
]
requires-python = ">=3.11.2"
dependencies = [
    "webex-bot<1.1.0,>=1.0.3",
    "pillow<12.0.0,>=11.0.0",
    "astroid<=4.0.1",
]

[dependency-groups]
dev = [
    "black<25.9.1,>=25.9.0",
    "coverage<8.0.0,>=7.6.10",
    "isort<7.0.1,>=7.0.0",
    "pylint<4.1.0,>=4.0.0",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.0.0,>=8.3.4",
    "pre-commit<5.0.0,>=4.0.1",
]

[project.scripts]
meme = "app.main:main"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
