[project]
name = "webexmemebot"
version = "0.0.0"
description = "Webex-based meme generation bot using memegen.link."
readme = "README.md"
authors = [
    {name = "luketainton"},
]
requires-python = "<3.15,>=3.14"
dependencies = [
    "webex-bot<1.2.1,>=1.2.0",
    "pillow<12.1.2,>=12.1.1",
    "astroid<=4.1.0",
]

[dependency-groups]
dev = [
    "black<26.1.1,>=26.1.0",
    "coverage<8.0.0,>=7.6.10",
    "isort<8.0.1,>=8.0.0",
    "pylint<4.1.0,>=4.0.0",
    "pylint-exit<2.0.0,>=1.2.0",
    "pytest<9.1.0,>=9.0.0",
    "pre-commit<5.0.0,>=4.0.1",
    "pytest-github-actions-annotate-failures>=0.3.0",
]

[project.scripts]
meme = "app.main:main"

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 120
